--- a/smash.html
+++ b/smash.html
@@ -10,6 +10,7 @@
 <body>
     <div class="current-score" id="currentScore">0</div>
     <div class="deadline"></div>
+    <div class="level" id="levelUp"></div>
     <div class="flex-container">
         <div class="flex-item" id="minion1" onclick="smashMinion('minion1')">
             <div class="eye1"></div>
